23 June 2004 Sylvain Pion
- Add dummy symbol in src/Interval_arithmetic.C to remove warning from
  VC++ linker.

21 June 2004 Sylvain Pion
- Add Kernel_profiler.
- Add predicates used by convex_hull_2.

21 June 2004 Sylvain Pion
- Improve static filters for 2D predicates.

20 June 2004 Sylvain Pion
- Merge Static_filters into Filtered_kernel.
- Static_filter_error : add ulp() function for new filters.
- Static_filter::Orientation_3 : improve filter.
- Static_filter::Side_of_orientes_sphere_3 : improve filter.

20 June 2004 Sylvain Pion
- Don't assume coordinates are doubles, call to_double().

20 June 2004 Sylvain Pion
- Rewrite of Static_filters and its test-suite in preparation for the merge.

20 June 2004 Sylvain Pion
- Put diff_was_exact() in a separate file.

20 June 2004 Sylvain Pion
- Use CGAL_NTS instead of CGAL::.

13 June 2004 Sylvain Pion
- Remove purely static code from Static_filters.
  It's pure overhead for now : requires users' intervention, with expected low
  gain, and is in the way for proper integration.  If it will have to be
  re-added one day, it should probably be in an different place.

5 June 2004 Sylvain Pion
- test-suite : specificaly test for constant propagation.

22 May 2004 Sylvain Pion
- Filtered_exact : remove useles copy ctor (valgrind bogs on it).

9 May 2004 Sylvain Pion
- Remove CGAL_IA_NO_INLINE (let the compiler do its job).

8 May 2004 Sylvain Pion
- Interval_nt : Partially undo the change done on 11 May 2003 : replace the
  internal std::pair<double, double> by 2 doubles.
  It brings back some performance.

8 May 2004 Sylvain Pion
- SSE2 handling (bugzilla #184).
  Support for GCC (>= 3.3) options : -mfpmath=sse
  which is faster than the traditional FPU, especially since we
  do not have to workaround some "features" of the x87.
  -mfpmath=387,sse is not yet supported.

8 May 2004 Sylvain Pion
- Move FPU_empiric_test() and force_ieee_double_precision() from
  src/Interval_arithmetic.C to tst0.C and FPU.h respectively.