@@ -1,3 +1,6 @@
+24 June 2004 Sylvain Pion
+- Use CGAL::Random instead of drand48 in test/Static_filters.C.
+
 23 June 2004 Sylvain Pion
 - Add dummy symbol in src/Interval_arithmetic.C to remove warning from
   VC++ linker.
